# sensor-embedded-rs

./: .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
docs/: wg-protocol-esp32c6-assessment.md  wifi-credentials-storage.md
src/: app.rs  lib.rs
src/tasks/: app_task.rs  ble_task.rs  led_task.rs  mod.rs  wifi_task.rs
