[package]
edition = "2024"
name = "sensor-embedded-rs"
rust-version = "1.92"
version = "0.1.0"

[lib]
test = false    # could be enabled later to run normal tests using host toolchain

[[bin]]
name = "embedded"
path = "./src/bin/main.rs"
test = false

[[test]]
name = "hello_test"
harness = false
test = false    # disabled for now so `cargo test` in `pre-commit` doesn't run automatically

[dependencies]
critical-section = "1.2.0"
static_cell = "2.1.1"
defmt = "1.0.1"
heapless = { version = "0.9" }

postcard = { version = "1", default-features = false, features = ["use-defmt"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }

embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-net = { version = "0.8.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }

esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }
esp-hal = { version = "~1.0", features = ["defmt", "esp32c6", "unstable"] }
esp-storage = { version = "0.8.1", features = ["defmt", "esp32c6"] }
esp-radio = { version = "0.17.0", features = [
    "ble",
    "coex",
    "defmt",
    "esp-alloc",
    "esp32c6",
    "smoltcp",
    "unstable",
    "wifi"
] }
esp-rtos = { version = "0.2.0", features = [
    "defmt",
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32c6",
] }

# this is pinned to 0.5.0 due to compatibility issues
trouble-host = { version = "0.5.0", features = [
    "defmt",
    "derive",
    "default-packet-pool",
    "gatt",
    "peripheral",
    "scan"
] }
# this is disabled because of the above
# bt-hci = "0.8.0"

smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

# extra dependencies
smart-leds = "0.4.0"
esp-hal-smartled = { version = "0.17.0", features = ["defmt", "esp32c6"] }

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
    "defmt",
    "embassy",
    "external-executor",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
